force-app/main/default/objects/Team_Member__c/Team_Member__c.object-meta.xml
<CustomObject>
    <description>Team member object connects either internal staff or contractors to a project assignment.  If you further customize the application, you can prevent &quot;stray time reporting&quot; using apex coding so that team members cannot report time outside of the assigned date range.  This becomes important if your organization reports heavily on project costing or SOP-98 capital/expense.  in addition, Force.com Visualforce or Adobe Flex code can be leveraged to help with the matching of resources to projects/work requests.  Please contact professional services for more information on consulting rates or the Salesforce.com Developer network (www.salesforce.com/developer).</description>
    <label>Team Member</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>