force-app/main/default/objects/Team_Member__c/fields/Assignment_Description__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Description__c</fullName>
    <inlineHelpText>Please include any notes on the description of the role requested.  Does this role call for travel?  What is the priority?  Who will this team member report to?  What is the frequency of engagement summary reports?</inlineHelpText>
    <label>Assignment Description</label>
    <type>TextArea</type>
</CustomField>