force-app/main/default/objects/Team_Member__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a lookup to the contact record to track vendors working on projects.</inlineHelpText>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>R00N80000002lXWQEA2</relationshipName>
    <type>Lookup</type>
</CustomField>