force-app/main/default/objects/Team_Member__c/fields/Planed_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Planed_Deliverables__c</fullName>
    <label>Planned Deliverables</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>