force-app/main/default/objects/Team_Member__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>PPM_Project__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>R00N80000002lXWNEA2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>