force-app/main/default/objects/Team_Member__c/fields/Requested_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Requested_Allocation__c</fullName>
    <inlineHelpText>What is the approximate percent of time required?  Assume 40hrs/week.</inlineHelpText>
    <label>Requested Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>