force-app/main/default/objects/Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Support Specialist</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>