force-app/main/default/objects/Team_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a lookup to the user and used to assign internal staff to a project team member.</inlineHelpText>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N80000002lXWPEA2</relationshipName>
    <type>Lookup</type>
</CustomField>